--- a/libs/kafka-consumer/pom.xml
+++ b/libs/kafka-consumer/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ru.sbp.school.kafka</groupId>
-        <artifactId>kafka</artifactId>
+        <artifactId>libs</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>app</artifactId>
+    <artifactId>kafka-consumer</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -19,23 +19,21 @@
     <dependencies>
         <dependency>
             <groupId>ru.sbp.school.kafka</groupId>
+            <artifactId>utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.sbp.school.kafka</groupId>
             <artifactId>api</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>ru.sbp.school.kafka</groupId>
-            <artifactId>model</artifactId>
+            <artifactId>api</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>ru.sbp.school.kafka</groupId>
-            <artifactId>kafka-producer</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>ru.sbp.school.kafka</groupId>
-            <artifactId>kafka-consumer</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
