--- a/libs/pom.xml
+++ b/libs/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>kafka-producer</module>
+        <module>kafka-consumer</module>
         <module>utils</module>
         <module>api</module>
     </modules>
